--- a/userContent.css
+++ b/userContent.css
@@ -1,3 +1,76 @@
+html body div#full div#content div#main recommended-extensions-section taar-notice message-bar.discopane-notice div.discopane-notice-content span {
+    color: #282828 !important;
+}
+
+
+* {
+    scrollbar-color: #383838 #202020 !important;
+    scrollbar-width: auto !important;
+}
+
+@-moz-document url-prefix("about:"),
+@-moz-document url-prefix("chrome://mozapps/content/extensions/aboutaddons.html") {
+
+    window,
+    page,
+    html,
+    .main-content,
+    scrollbar {
+        scrollbar-color: #383838 #202020 !important;
+        scrollbar-width: auto !important;
+    }
+}
+
+.discopane-notice-content > span {
+    color: white !important;
+}
+
+div.container span.icon {
+    filter: invert(100%) !important;
+}
+
+* { 
+   --in-content-link-color: LightCoral !important;
+   --in-content-link-color-hover: White !important;
+   --in-content-link-color-active: White !important;
+   --in-content-link-color-visited: #3eb3ba !important;
+}
+
+@media (min-width:720px) {
+#main {
+    max-width: unset !important;
+    padding-right: 28px !important;
+}
+}
+
+addon-list>section,
+recommended-addon-list {
+    padding: 1em !important;
+    display: grid !important;
+    grid-template-areas: "hd hd""cd cd" !important;
+    grid-template-columns: 1fr 1fr !important;
+    column-gap: 1em !important;
+}
+
+addon-card .card-contents {
+    width: unset !important;
+    white-space: initial !important;
+}
+
+.card-heading-image {
+    max-width: calc(100% + 32px) !important;
+}
+
+section>h2 {
+    grid-area: hd !important;
+}
+
+addon-card {
+    padding-bottom: 0px !important;
+    padding-top: 0px !important;
+    grid-area: auto !important;
+}
+
 .button.primary, .button.done, .actions button.primary, .actions button.done {
     border: none !important;
 }
@@ -107,7 +180,7 @@ hbox.dialog-button-box {
 
 /* ----- CHECKBOX COLORS ----- */
 :root {
-   --checkbox-checked-bgcolor: LightCoral !important;
+  --checkbox-checked-bgcolor: LightCoral !important;
    --checkbox-checked-color: #282828 !important;
    --checkbox-checked-border-color: rgb(0,97,224);
    --checkbox-checked-bgcolor: LightCoral !important;
@@ -164,17 +237,6 @@ html body div#full div#content div#main addon-list section addon-card div.card.a
 .card-heading-image {
     width: var(--section-width) !important;
     object-fit: scale-down !important;
-}
-
-.card {
-    background: #202020 !important;
-    margin: 0 0 8px !important;
-    margin-bottom: 8px !important;
-    padding: calc(var(--card-padding) - 10px) !important;
-}
-
-.card:hover {
-  background: #191919 !important;
 }
 
 .addon.card {
@@ -323,25 +385,6 @@ html#preferences-root body#preferences-body stack#preferences-stack hbox vbox.na
     color: #202020 !important;
 }
 
-
-/* ----- SCROLLBAR COLOR ----- */
-/* in userContent for all the about:pages of firefox */
-@-moz-document url-prefix("about:"),
-@-moz-document url-prefix("chrome://mozapps/content/extensions/aboutaddons.html") {
-	window,
-	page,
-	html,
-	.main-content,
-	scrollbar {
-		scrollbar-color: #3c3c3f 282828 !important;
-		scrollbar-width: thin !important;
-	}
-}
-/* for anywhere internal pages FF */
-* {
-	scrollbar-color: #3c3c3f 282828 !important;
-	scrollbar-width: thin !important;
-}
 @-moz-document regexp("^(about:|chrome:|moz-extension:).*") {
     html:not([role="dialog"]),
     html:not([role="dialog"]) *,
@@ -398,7 +441,6 @@ html#preferences-root body#preferences-body stack#preferences-stack hbox vbox.na
 }
 
 /* ----- TOP SITES TEXT FONT ( NEW TAB AS HOME PAGE ) ----- */
-
 .top-site-outer .title {
     margin-inline-start: 5px !important;
     font-size: 12px !important;
@@ -413,9 +455,7 @@ html#preferences-root body#preferences-body stack#preferences-stack hbox vbox.na
 }
 
 .top-site-outer:hover {
-
  background-color: #2f2f2f !important;
-
 }
 
 @-moz-document url("about:home"), url("about:newtab"){ .icon.icon-pin-small{ display: none !important } }
