--- a/userChrome.css
+++ b/userChrome.css
@@ -7,16 +7,14 @@ Special thnx to
 MotherStylus & It_Was_The_Other_Guy
 most of the unlabled codes I got from them. */
 
+/* ----- URL DROPDOWN HOVER TEXT COLOR & WEIGHT ----- */
+html#main-window body box toolbox#navigator-toolbox toolbar#nav-bar.browser-toolbar hbox#nav-bar-customization-target.customization-target toolbaritem#urlbar-container.chromeclass-location hbox#urlbar vbox.urlbarView div.urlbarView-body-outer div.urlbarView-body-inner div#urlbar-results.urlbarView-results .urlbarView-row .urlbarView-row-inner:hover span.urlbarView-url {
+    color: #282828 !important;
+    font-weight: 400 !important;
+}
+
+
 #identity-box:focus, #tracking-protection-icon-container:focus {
-    background-color: white !important;
-}
-
-.popup-notification-button {
-    color: white !important;
-}
-
-.popup-notification-button;hover {
-    color: white !important;
     background-color: white !important;
 }
 
