--- a/userChrome.css
+++ b/userChrome.css
@@ -5,7 +5,7 @@ Huge thanks to the great and warm Firefox CSS Community which creating this them
 https://www.reddit.com/r/FirefoxCSS/
 Special thnx to
 MotherStylus & It_Was_The_Other_Guy
-most of the unlabled codes I got from them. */
+most of the unlabled codes I got from them or they helped me out with */
 
 /* ----- URL DROPDOWN HOVER TEXT COLOR & WEIGHT ----- */
 html#main-window body box toolbox#navigator-toolbox toolbar#nav-bar.browser-toolbar hbox#nav-bar-customization-target.customization-target toolbaritem#urlbar-container.chromeclass-location hbox#urlbar vbox.urlbarView div.urlbarView-body-outer div.urlbarView-body-inner div#urlbar-results.urlbarView-results .urlbarView-row .urlbarView-row-inner:hover span.urlbarView-url {
