--- a/userContent.css
+++ b/userContent.css
@@ -1,5 +1,12 @@
 /* ----- ᗪ卂尺Ҝ爪卂ㄒㄒ乇尺  乃ㄚ  乃ㄥㄖㄖᗪㄚ卄乇ㄥㄥϬ𝟙९ ----- */
 
+.updateSettingCrossUserWarningContainer {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+}
+
+html#preferences-root {
+    background-color: #202020 !important;
+}
 
 :root {
     --in-content-button-horizontal-padding: 12px !important;
@@ -107,6 +114,9 @@ menulist > menupopup > menuitem, menulist > menupopup > menucaption, menulist > 
 html#preferences-root body#preferences-body stack#preferences-stack hbox vbox.main-content vbox.pane-container vbox#mainPrefPane groupbox#applicationsGroup search-textbox#filter {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
     border: 0px solid #282828 !important;
+    min-height: 24px !important;
+    height: 24px !important;
+    padding-top: 4px !important;
 }
 
 .context-menu > ul > li > a, .context-menu > ul > li > button {
@@ -126,6 +136,7 @@ html#preferences-root body#preferences-body stack#preferences-stack hbox vbox.ma
 
 html body.illustrated div.container.restore-chosen div.button-container button#errorTryAgain.primary {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+    border: 0px solid #282828 !important;
 }
 html body.illustrated div.container.restore-chosen div.button-container button#errorTryAgain.primary:hover {
     background-color: #282828 !important;
@@ -133,6 +144,7 @@ html body.illustrated div.container.restore-chosen div.button-container button#e
 
 html body.illustrated div.container.restore-chosen div.button-container button#errorCancel {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+    border: 0px solid #282828 !important;
 }
 
 #tabsToggle::after {
@@ -822,7 +834,7 @@ html body div#full div#content div#main addon-list section addon-card div.card.a
 }
 #categories > .category {
     border-radius: 4px;
-    min-height: 35px;
+    min-height: 40px !important;
     appearance: none;
     margin-inline-start: 34px;
     padding-inline: 10px;
@@ -830,7 +842,12 @@ html body div#full div#content div#main addon-list section addon-card div.card.a
     padding-top: 8px !important;
     margin: 0px !important;
     padding-bottom: 8px;
-    scale: 85% !important;
+    scale: 90% !important;
+    margin-top: 1px !important;
+    margin-bottom: 1px !important;
+    margin-right: -9px !important;
+    margin-left: -9px !important;
+    padding-left: 12px !important;
 }
 
 html body.activity-stream div#root div div.outer-wrapper.ds-outer-wrapper-breakpoint-override.visible-logo.newtab-experience main div.body-wrapper.on div.discovery-stream.ds-layout div.ds-column.ds-column-12 div.ds-column-grid div div.ds-top-sites section.collapsible-section.top-sites.animation-enabled div.section-body ul.top-sites-list li.top-site-outer.hide-for-narrow.active div.top-site-inner div span.context-menu ul.context-menu-list li.context-menu-item button:active {
@@ -996,6 +1013,10 @@ html body div#full div#sidebar categories-box#categories button.category {
     min-height: 45px !important;
 }
 
+html body div#full div#sidebar categories-box#categories button.category span.category-name {
+    padding-left: 30px !important;
+}
+
 html body div#full div#content div#main recommended-extensions-section footer.view-footer div.view-footer-item a.privacy-policy-link {
     color: #10B2E7 !important;
     text-decoration: none !important;
@@ -1072,6 +1093,8 @@ html .text-link {
 
 html#preferences-root body#preferences-body stack#preferences-stack hbox vbox.navigation richlistbox#categories {
     font-size: 13px !important;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50), 0 0 0 1px #4040405c inset !important;
+    padding: 4px !important;
 }
 
 html body div.container div.title h1#warningTitle.title-text {
